run for es6 with babel, create debug route, passing file post with multer

--- a/views/help/main.pug
+++ b/views/help/main.pug
@@ -44,3 +44,10 @@ block content
     li post /api/category
     li post /api/category/:id/edit
     li post /api/category/:id/delete
+
+  h3 run
+    ```sh
+    $ npm start // default expressjs run
+    $ npm run babel // run with babel, support for ES6
+    ```
+
