move to app folder, prepare for ES6, fix help, lets start

--- a/views/help/main.pug
+++ b/views/help/main.pug
@@ -46,8 +46,6 @@ block content
     li post /api/category/:id/delete
 
   h3 run
-    ```sh
-    $ npm start // default expressjs run
-    $ npm run babel // run with babel, support for ES6
-    ```
+  p npm start // default expressjs run
+  p npm run babel // run with babel, support for ES6
 
